# claude-cli-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_es.md  README_ja.md  README_ko.md  README_zh-CN.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: 01_basic_query.rs  02_streaming.rs  03_multi_turn.rs  04_permissions.rs  05_hooks.rs  06_multimodal.rs  07_thinking_and_fallback.rs  08_cancellation.rs  09_message_callback.rs  10_dynamic_control.rs  multi_turn.rs  simple_query.rs  streaming.rs
src/: callback.rs  client.rs  config.rs  discovery.rs  errors.rs  hooks.rs  lib.rs  mcp.rs  permissions.rs  transport.rs  util.rs
src/testing/: builders.rs  mock_transport.rs  mod.rs  scenario.rs
src/types/: content.rs  messages.rs  mod.rs
