[package]
name = "claude-cli-sdk"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Rust SDK for programmatic interaction with the Claude Code CLI"
repository = "https://github.com/pomdotdev/claude-cli-sdk"
homepage = "https://github.com/pomdotdev/claude-cli-sdk"
documentation = "https://docs.rs/claude-cli-sdk"
categories = ["development-tools", "api-bindings", "asynchronous"]
keywords = ["claude", "ai", "agent", "anthropic", "sdk"]
include = ["src/**/*.rs", "examples/**/*.rs", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
async-trait = "0.1"
futures-core = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
flume = "0.11"
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
typed-builder = "0.20"
which = "7"
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
testing = []
efficiency = []
integration = []

